--- a/css_types.html
+++ b/css_types.html
@@ -21,7 +21,7 @@
     <!--inline css-->
     <h1 style="color: brown;background-color: blue;font-size: 40;">welcome sonali</h1>
     <!--internal css-->
-    <h2>jadhav spnali</h2>
+    <h2>jadhav sonali</h2>
     <h2>nikita suryawanshi</h2>
 </body>
 </html>
