--- a/test.html
+++ b/test.html
@@ -50,7 +50,6 @@
         color: black;
         text-shadow: 5px 5px 5px aqua;
     }
-
     </style>
 </head>
 <body>
@@ -61,12 +60,11 @@
     <h1 class="t_d_over">anand</h1>
     <h1 class="t_d_line">rupali</h1>
 
-
  <h1 class="t-center">love india</h1>
     <h1 class="t_upper">sonam suryawanshi</h1>
     <h1 class="t_lower">hello its me patil</h1>
     <h1 class="t_caitalize">hello its me patil</h1>
-
-
+    <h1 class="t_caitalize">SONALI</h1>
+    
 </body>
 </html>
