--- a/background_image.html
+++ b/background_image.html
@@ -9,7 +9,7 @@
             background-image: url(images/books.jpg);
             background-repeat: no-repeat;
             background-size: auto cover;
-            background-position: top center;
+            background-position: center;
             background-color: aqua;
         }
         h1{
