--- a/possitions.html
+++ b/possitions.html
@@ -39,7 +39,7 @@
         }
         </style>
 </head>
-<body>
+<body>tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented
     <div class="box box1">static</div>
     <div class="box box2">relative</div>
     <div class="box box3">absulute</div>
@@ -47,9 +47,36 @@
     <div class="box box4">fixed</div>
 
     div.box.box$*5
+
+
+
+    <p>Rajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented by</p>
+
+
+
+    <p>Rajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented </p>
+
+  <p> tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented
+   tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented
+   tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented
+   tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented
+   tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented
    
 
+tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopt
+
+
+
+
+
+
+
+
+
+
+ed and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and tra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implemented byRajarshi Shahu Mahavidyalaya, Latur is a higher secondary education institution in the Latur, Maharashtra, India. The college was a pioneer in the development of the "Latur Pattern", which has been adopted and implementedimplemented</p>
 
 
 </body>
+
 </html>
